--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,9 +3,11 @@ tasks:
   - init:  |
       sudo pip3 install streamlit
       
+      
     command: echo 'start script'
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
   - port: 8501
     onOpen: open-preview
+    visibility : public
