--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,12 @@ tasks:
       sudo apt install -y mosquitto
       sudo apt install mosquitto-clients
       sudo service mosquitto start
-      sudo systemctl enable mosquitto
+      sudo service mosquitto start
+      sudo pip3 install paho-mqtt
+      git clone https://github.com/eclipse/paho.mqtt.python.git
+      cd paho.mqtt.python
+      python setup.py install
+
     command: echo 'start script'
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
