--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,7 +11,7 @@ tasks:
       cd paho.mqtt.python
       python setup.py install
 
-    command: echo 'start script'
+    command: streamlit run pagina.py
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
