--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,7 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - init:  |
+      pip install sounddevice     
       sudo pip3 install streamlit
       sudo apt install -y mosquitto
       sudo apt install mosquitto-clients
