--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,10 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - init:  |
+      python -m pip install librosa
+      python -m pip install scipy
+      sudo apt-get install libportaudio2
+      sudo apt-get install libsndfile1
       pip install sounddevice     
       sudo pip3 install streamlit
       sudo apt install -y mosquitto
