--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,16 +1,14 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
+
+#Instaladores não necessários
+#sudo apt install -y mosquitto
+#sudo apt install mosquitto-clients
+#sudo service mosquitto start
+#sudo service mosquitto status
 tasks:
-  - init:  |
-      python -m pip install librosa
-      python -m pip install scipy
-      sudo apt-get install libportaudio2
-      sudo apt-get install libsndfile1
-      pip install sounddevice     
+  - init:
+      pip install pandas  
       sudo pip3 install streamlit
-      sudo apt install -y mosquitto
-      sudo apt install mosquitto-clients
-      sudo service mosquitto start
-      sudo service mosquitto status
       sudo pip3 install paho-mqtt
       git clone https://github.com/eclipse/paho.mqtt.python.git
       cd paho.mqtt.python
