--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,6 +9,10 @@ tasks:
   - init:
       pip install pandas  
       sudo pip3 install streamlit
+      sudo apt install -y mosquitto
+      sudo apt install mosquitto-clients
+      sudo service mosquitto start
+      sudo service mosquitto status
       sudo pip3 install paho-mqtt
       git clone https://github.com/eclipse/paho.mqtt.python.git
       cd paho.mqtt.python
