--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,6 +3,7 @@ tasks:
   - init:  |
       python -m pip install scipy   
       sudo pip3 install streamlit
+      sudo pip3 install streamlit-autorefresh
       sudo apt install -y mosquitto
       sudo apt install mosquitto-clients
       sudo service mosquitto start
