--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,7 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - init:  |
+      npm install -g json
       python -m pip install scipy   
       sudo pip3 install streamlit
       sudo pip3 install streamlit-autorefresh
