--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,7 @@ tasks:
       pip install python-csv
       npm install -g json
       python -m pip install scipy   
+      sudo pip3 install librosa
       sudo pip3 install streamlit
       sudo pip3 install streamlit-autorefresh
       sudo pip3 install matplotlib
