--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,8 @@ tasks:
   - init:  |
       pip install python-csv
       npm install -g json
-      python -m pip install scipy   
+      python -m pip install scipy  
+      sudo apt-get install libsndfile1
       sudo pip3 install librosa
       sudo pip3 install streamlit
       sudo pip3 install streamlit-autorefresh
